# atlas-compute-market

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.dev.yaml  compose.yaml  deploy.sh  package.json  tsconfig.json
.github/workflows/: build-gvmi.yml
agent/: Cargo.toml  Dockerfile  README.md  manager.py
agent/src/: api.rs  bench.rs  crypto.rs  file_transport.rs  jcs.rs  lib.rs  main.rs
agent/tests/: vectors.rs
agent/vm-driver/: Cargo.toml
agent/vm-driver/src/: main.rs  provision.rs
docs/: registry-spec.md
scripts/: bench-client.ts  gen-bench-vectors.ts
src/: bench.ts  config.ts  crypto.ts  db.ts  dev-requestors.ts  dev-seed.ts  errors.ts  http.ts  jcs.ts  redis.ts  server.ts  stats-history.ts  validate.ts
src/handlers/: attest.ts  offers.ts  ops.ts  providers.ts  query.ts  sim.ts
test/: bench.test.ts  crypto.test.ts  dev-requestors.test.ts  integration.test.ts  jcs.test.ts  validate.test.ts
test/vectors/: agent-vectors.json
web/: README.md  index.html  vite.config.ts
web/public/: join.sh
web/src/: App.tsx  DemandTable.tsx  JoinPage.tsx  LineChart.tsx  OffersTable.tsx  ProviderCard.tsx  ProvidersTable.tsx  RequestorCard.tsx  SimJobsTable.tsx  StatsPage.tsx  Tiles.tsx  api.ts  format.ts  index.css  usePoll.ts
