[package]
name = "atlas-agent"
version = "0.1.0"
edition = "2021"
description = "Atlas Compute Market provider agent — benchmark solver + registry client"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
getrandom = "0.2"
hex = "0.4"
k256 = "0.13"
serde_json = "1"
tiny-keccak = { version = "2", features = ["keccak"] }
ureq = { version = "2", features = ["json"] }

[profile.release]
codegen-units = 1
lto = true
